@@ -1,6 +1,8 @@
 2011-09-11  Onkar Shinde  <onkarshinde@gmail.com>
 
 	* src/gui-editor.h: Use only top level headers for gtksourceview.
+	* src/gui-editor.c, src/gui-list-message.c: In GtkTextBuffer line
+	numbers start from 0. Take this into account when highlighting line.
 
 2011-09-05  Onkar Shinde  <onkarshinde@gmail.com>
 
